# facebookads

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  brand_identity_generator.py  hello_world.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.specify/memory/: constitution.md  constitution_migration_v1_to_v2.md  constitution_update_checklist.md  constitution_v2.md
agents/_shared/docs/: test-results-summary.md
agents/_shared/schemas/: agent_envelope.json
agents/article_outline_generator/: CONSTITUTIONAL_COMPLIANCE.md  README.md  __init__.py  article_outline_generator.py  article_outline_generator.py.backup  pyproject.toml
agents/article_outline_generator/agents/article_outline_generator/schemas/: all_schemas.json  envelope_schema.json  error_schema.json  input_schema.json  interim_output_schema.json  output_schema.json
agents/article_outline_generator/schemas/: schema.envelope.json  schema.input.json  schema.output.json
agents/article_outline_generator/tests/contract/: test_envelope_schema.py  test_input_schema.py  test_output_schema.py
agents/article_outline_generator/tests/golden/: test_article_sample.py  test_backward_compatibility.py  test_enhanced_classification.py  test_interim_classification.py
agents/article_outline_generator/tests/integration/: test_article_generation.py  test_backward_compatibility.py  test_content_classification.py  test_llm_enhancement.py  test_performance_budgets.py  test_quickstart_scenarios.py  test_story_generation.py
agents/bie/: .env.example  .ruff.toml  README.md  bie.py  pyproject.toml  requirements.txt
agents/bie/examples/: high_score_platform.md  low_score_restaurant.md  test-alt-sections.md  test-minimal.md  test-nested.md
agents/bie/tests/contract/: test_enhanced_parser_contract.py
agents/bie/tests/golden/: test_backward_compatibility.py
agents/bie/tests/integration/: test_alt_sections.py  test_basic_evaluation.py
agents/brand_identity_generator/: README.md  brand_identity_generator.py
agents/brand_identity_generator/examples/: comprehensive-brand.md  incomplete-brand.md  invalid-brand.md  minimal-brand.md  simple-brand.md
agents/brand_identity_generator/schemas/: output.json
agents/constitutional_compliance_validator/: README.md  constitutional_compliance_validator.py
agents/constitutional_compliance_validator/schemas/: input.json  output.json
agents/customer_journey_mapper/: README.md  customer_journey_mapper.py
agents/customer_journey_mapper/schemas/: input.json  output.json
agents/prd_enhancer/: .gitignore  README.md  prd_enhancer.py  pytest.ini  requirements.txt  test_prd.md  test_prd_enhanced.md
agents/prd_enhancer/docs/: USAGE.md
agents/prd_enhancer/examples/: sample_complex_prd.md  sample_complex_prd_enhanced.md
docs/: business_idea_evaluator.md  enhanced_faith_connect.md  faith_connect.md  migration-baseline.md  prd_enhancer.md
examples/: basic-brand.md  complete-brand.md
schemas/: brand_identity.json.schema  facebook_creatives.json.schema  ndis_provider.json.schema
specs/001-i-would-like/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-i-would-like/contracts/: cli-interface.md
specs/002-update-the-specs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-update-the-specs/contracts/: llm-enhancement-interface.md
specs/003-please-make-it/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-please-make-it/contracts/: configuration-interface.md
specs/004-fix-pylance-error/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-fix-pylance-error/contracts/: validation-interface.md
specs/005-brand-idenity-generator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-brand-idenity-generator/contracts/: content-requirements.md  documentation-structure.md
specs/006-font-selector-please/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-font-selector-please/contracts/: enhancement-integration.md  font-selection-api.md
specs/007-update-documentation-brand/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-update-documentation-brand/contracts/: documentation-validation.md
specs/008-customer-jouney-mapper/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-validate-that-the/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/010-article-outline-generator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-intererim-classification-of/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/012-the-changes-are/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-prd-enhancer-program/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-business-idea-evaluator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-bie-enhancement-complete/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-bie-enhancement-complete/contracts/: cli-commands.yaml
specs/016-flexible-business-idea/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/contract/: test_backward_compatibility.py  test_configuration_discovery.py  test_configuration_validation.py  test_directory_management.py  test_enhance_flag.py  test_gap_analysis.py  test_interactive_enhancement.py  test_performance.py  test_provider_configuration.py  test_validation_behavior_preservation.py
tests/integration/: test_configuration_integration.py  test_performance.py
tests/unit/: test_llm_models.py
validation-tests/: README.md  VALIDATION_REPORT.md
validation-tests/fixtures/: test-brand-basic.md  test-brand-comprehensive.md  test-brand-font-focused.md
validation-tests/scripts/: test-contracts.sh  test-quality-assurance.sh  test-quick-start.sh  test-workflows.sh  validate-content.sh
(+24 files in other folders)
