[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brand-identity-generator"
version = "1.0.0"
description = "LLM-Enhanced Brand Identity Processing Tool"
authors = [{name = "Brand Generator Team"}]
dependencies = [
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.0.280",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
select = ["E", "F", "W", "C", "I"]
line-length = 88
target-version = "py311"

[tool.ruff.isort]
known-first-party = ["brand_identity_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"