[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facebook-ads-agents"
version = "1.0.0"
description = "Collection of single-file Python agents for Facebook Ads management"
authors = [{name = "Facebook Ads Team"}]
dependencies = [
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "requests>=2.31.0",
    "pydantic-ai>=0.0.1",
    # Customer Journey Mapper specific
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.0.280",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
select = ["E", "F", "W", "C", "I"]
line-length = 88
target-version = "py311"

[tool.ruff.isort]
known-first-party = ["agents"]

[tool.pytest.ini_options]
testpaths = ["tests", "agents"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --maxfail=1"
markers = [
    "contract: Contract tests for schema validation",
    "integration: Integration tests for full workflows",
    "unit: Unit tests for individual components",
    "performance: Performance and benchmark tests",
    "golden: Golden tests for deterministic outputs",
]
