[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "business-idea-evaluator"
version = "1.0.0"
description = "Transform unstructured business ideas into structured, evaluated insights"
authors = [{name = "Development Team"}]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.1",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true